<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.view.LoginFragment" >

    <EditText
        android:id="@+id/et_EmailLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_passLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/et_EmailLogIn"
        app:layout_constraintStart_toStartOf="@+id/et_EmailLogIn"
        app:layout_constraintTop_toBottomOf="@+id/et_EmailLogIn" />

    <Button
        android:id="@+id/btn_LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#C67C4E"
        android:text="@string/btn_logIn"
        app:layout_constraintEnd_toEndOf="@+id/et_passLogIn"
        app:layout_constraintStart_toStartOf="@+id/et_passLogIn"
        app:layout_constraintTop_toBottomOf="@+id/et_passLogIn" />

    <TextView
        android:id="@+id/tv_goToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_gotoSignUp"
        app:layout_constraintEnd_toEndOf="@+id/btn_LogIn"
        app:layout_constraintStart_toStartOf="@+id/btn_LogIn"
        app:layout_constraintTop_toBottomOf="@+id/btn_LogIn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_guestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_GuestMode"
        app:layout_constraintEnd_toEndOf="@+id/tv_goToSignUp"
        app:layout_constraintStart_toStartOf="@+id/tv_goToSignUp"
        app:layout_constraintTop_toBottomOf="@+id/tv_goToSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>